@@ -6,12 +6,15 @@ import io.github.orangewest.trans.core.TransModel;
 import io.github.orangewest.trans.core.TransRepoMeta;
 import io.github.orangewest.trans.exception.TransException;
 import io.github.orangewest.trans.manager.TransClassMetaCacheManager;
+import io.github.orangewest.trans.metrics.TransMetricContext;
+import io.github.orangewest.trans.metrics.TransMetrics;
 import io.github.orangewest.trans.metrics.TransMetricsCollector;
+import io.github.orangewest.trans.metrics.TransMetricsOperations;
 import io.github.orangewest.trans.repository.TransRepository;
 import io.github.orangewest.trans.repository.TransRepositoryFactory;
 import io.github.orangewest.trans.repository.DefaultTransContext;
-import io.github.orangewest.trans.resolver.TransObjResolver;
-import io.github.orangewest.trans.resolver.TransObjResolverFactory;
+import io.github.orangewest.trans.resolver.TransValueResolver;
+import io.github.orangewest.trans.resolver.TransValueResolverFactory;
 import io.github.orangewest.trans.util.CollectionUtils;
 
 import java.util.ArrayList;
@@ -33,8 +36,8 @@ public class TransService {
     }
 
     /**
-     * 懒初始化翻译执行器：未通过 {@link #setExecutor} 显式指定时，
-     * 首次翻译按需创建（缓存线程池）。无需调用方预先 init()。
+     * 懒初始化虚拟线程执行器：未通过 {@link #setExecutor} 显式指定时，
+     * 首次翻译按需创建（每个任务一条虚拟线程）。无需调用方预先 init()。
      */
     private ExecutorService getExecutor() {
         ExecutorService e = executor;
@@ -42,7 +45,8 @@ public class TransService {
             synchronized (this) {
                 e = executor;
                 if (e == null) {
-                    e = Executors.newCachedThreadPool(r -> new Thread(r, "trans-thread-" + r.hashCode()));
+                    e = Executors.newThreadPerTaskExecutor(
+                            Thread.ofVirtual().name("trans-", 0).factory());
                     executor = e;
                 }
             }
@@ -51,60 +55,53 @@ public class TransService {
     }
 
     /**
-     * @param obj 需要被翻译的对象
-     * @return 是否翻译成功
+     * @param obj 需要被翻译的对象或返回值（支持同步对象、{@code Result} 等包装、{@code CompletableFuture}、
+     *            {@code Mono}/{@code Flux} 等——由已注册的 {@link TransValueResolver} 适配）
+     * @return 翻译后的对象（入参原对象，已就地填充翻译字段；obj 为 null 时返回 null）
      */
-    public boolean trans(Object obj) {
-        obj = resolveObj(obj);
-        if (obj == null) {
-            return false;
-        }
-        List<Object> objList = CollectionUtils.objToList(obj);
-        if (CollectionUtils.isEmpty(objList)) {
-            return false;
-        }
-        Class<?> objClass = objList.get(0).getClass();
-        if (objClass.getName().startsWith("java.")) {
-            return false;
-        }
-        long start = System.nanoTime();
-        boolean success = true;
-        try {
-            TransClassMeta info = TransClassMetaCacheManager.getTransClassMeta(objClass);
-            if (!info.needTrans()) {
-                return false;
-            }
-            doTrans(objList, info.getTransFieldList());
-            return true;
-        } catch (Throwable t) {
-            success = false;
-            throw t;
-        } finally {
-            TransMetricsCollector.get().recordTranslate(System.nanoTime() - start, success);
-        }
-    }
-
-    private Object resolveObj(Object obj) {
+    public Object trans(Object obj) {
         if (obj == null) {
             return null;
         }
-        List<TransObjResolver> resolvers = TransObjResolverFactory.getResolvers();
-        boolean resolve = false;
-        Object resolvedObj = obj;
-        for (TransObjResolver resolver : resolvers) {
-            if (resolver.support(obj)) {
-                resolvedObj = resolver.resolveTransObj(obj);
-                resolve = true;
-                break;
-            }
+        TransValueResolver adapter = TransValueResolverFactory.firstSupports(obj);
+        if (adapter != null) {
+            return adapter.handle(obj, this::trans);
         }
-        if (resolve) {
-            resolvedObj = resolveObj(resolvedObj);
-        }
-        return resolvedObj;
+        return translateCore(obj);
     }
 
-    private void doTrans(List<Object> objList, List<TransFieldMeta> transFieldMetaList) {
+    private Object translateCore(Object obj) {
+        List<Object> objList = CollectionUtils.objToList(obj);
+        if (CollectionUtils.isEmpty(objList)) {
+            return obj;
+        }
+        Class<?> objClass = objList.getFirst().getClass();
+        if (objClass.getName().startsWith("java.")) {
+            return obj;
+        }
+        TransMetricContext translateContext = TransMetricContext.builder(TransMetricsOperations.TRANSLATE)
+                .targetClass(objClass)
+                .depth(0)
+                .build();
+        TransMetrics.Span translateSpan = TransMetricsCollector.get()
+                .startSpan(TransMetricsOperations.TRANSLATE, translateContext);
+        try {
+            TransClassMeta info = TransClassMetaCacheManager.getTransClassMeta(objClass);
+            if (!info.needTrans()) {
+                return obj;
+            }
+            doTrans(objList, info.getTransFieldList(), translateSpan, objClass, 0);
+            return obj;
+        } catch (Throwable t) {
+            translateSpan.recordException(t);
+            throw t;
+        } finally {
+            translateSpan.end();
+        }
+    }
+
+    private void doTrans(List<Object> objList, List<TransFieldMeta> transFieldMetaList,
+                         TransMetrics.Span parentSpan, Class<?> targetClass, int parentDepth) {
         Map<TransRepoMeta, List<TransFieldMeta>> listMap = transFieldMetaList.stream().collect(Collectors.groupingBy(TransFieldMeta::getTransRepoMeta));
         if (listMap.size() > 1) {
             List<Throwable> errors = Collections.synchronizedList(new ArrayList<>());
@@ -113,7 +110,7 @@ public class TransService {
                                     .stream()
                                     .map(entry -> CompletableFuture.runAsync(() -> {
                                         try {
-                                            doTrans(objList, entry.getKey(), entry.getValue());
+                                            doTrans(objList, entry.getKey(), entry.getValue(), parentSpan, targetClass, parentDepth);
                                         } catch (Throwable t) {
                                             errors.add(t);
                                         }
@@ -121,15 +118,17 @@ public class TransService {
                                     .toArray(CompletableFuture[]::new))
                     .join();
             if (!errors.isEmpty()) {
-                Throwable cause = errors.get(0);
+                Throwable cause = errors.getFirst();
                 throw new TransException("Translation failed: " + cause.getMessage(), cause);
             }
         } else {
-            listMap.forEach((transRepoMeta, transFields) -> doTrans(objList, transRepoMeta, transFields));
+            listMap.forEach((transRepoMeta, transFields) ->
+                    doTrans(objList, transRepoMeta, transFields, parentSpan, targetClass, parentDepth));
         }
     }
 
-    private void doTrans(List<Object> objList, TransRepoMeta transRepoMeta, List<TransFieldMeta> transFields) {
+    private void doTrans(List<Object> objList, TransRepoMeta transRepoMeta, List<TransFieldMeta> transFields,
+                         TransMetrics.Span parentSpan, Class<?> targetClass, int parentDepth) {
         // 获取翻译仓库
         TransRepository<Object, Object> transRepository = TransRepositoryFactory.getTransRepository(transRepoMeta.getRepository());
         if (transRepository == null) {
@@ -137,25 +136,71 @@ public class TransService {
                     + (transRepoMeta.getRepository() == null ? "null" : transRepoMeta.getRepository().getName())
                     + ". Register it via TransRepositoryFactory.register(...) or mark it as a @Component in Spring.");
         }
-        List<TransModel> needTransList = toNeedTransList(objList, transFields);
-        if (CollectionUtils.isNotEmpty(needTransList)) {
-            long start = System.nanoTime();
-            boolean success = true;
-            try {
-                doTrans_0(transRepository, transRepoMeta, needTransList);
-            } catch (Throwable t) {
-                success = false;
-                throw t;
-            } finally {
-                TransMetricsCollector.get().recordRepository(
-                        transRepoMeta.getRepoName(), System.nanoTime() - start, success);
+        int repoDepth = parentDepth + 1;
+        TransMetrics.Span repoSpan = startRepoSpan(transRepoMeta, targetClass, parentSpan, repoDepth);
+        try {
+            List<TransModel> needTransList = toNeedTransList(objList, transFields);
+            if (CollectionUtils.isNotEmpty(needTransList)) {
+                Map<Object, Object> transValueMap = transRepository.getTransValueMap(
+                        needTransList.stream().map(TransModel::getMultipleTransVal).flatMap(Collection::stream).distinct().collect(Collectors.toList()),
+                        new DefaultTransContext(transRepoMeta.getRepoName(), transRepoMeta.getAttributes(),
+                                transRepoMeta.getRepoField() != null ? transRepoMeta.getRepoField().getType() : null));
+                if (CollectionUtils.isNotEmpty(transValueMap)) {
+                    Map<TransFieldMeta, List<TransModel>> byField = needTransList.stream()
+                            .collect(Collectors.groupingBy(TransModel::getTransField));
+                    int fieldDepth = repoDepth + 1;
+                    for (TransFieldMeta transField : transFields) {
+                        List<TransModel> fieldModels = byField.get(transField);
+                        if (CollectionUtils.isEmpty(fieldModels)) {
+                            continue;
+                        }
+                        TransMetrics.Span fieldSpan = startFieldSpan(transField, transRepoMeta, targetClass, repoSpan, fieldDepth);
+                        try {
+                            fieldModels.forEach(transModel -> transModel.fillValue(transValueMap));
+                            if (CollectionUtils.isNotEmpty(transField.getChildren())) {
+                                // 嵌套翻译：parent 指向上层 field Span，depth 递增
+                                doTrans(objList, transField.getChildren(), fieldSpan, targetClass, fieldDepth);
+                            }
+                        } catch (Throwable t) {
+                            fieldSpan.recordException(t);
+                            throw t;
+                        } finally {
+                            fieldSpan.end();
+                        }
+                    }
+                }
             }
+        } catch (Throwable t) {
+            repoSpan.recordException(t);
+            throw t;
+        } finally {
+            repoSpan.end();
         }
-        for (TransFieldMeta transField : transFields) {
-            if (CollectionUtils.isNotEmpty(transField.getChildren())) {
-                doTrans(objList, transField.getChildren());
-            }
-        }
+    }
+
+    private TransMetrics.Span startRepoSpan(TransRepoMeta transRepoMeta, Class<?> targetClass,
+                                            TransMetrics.Span parentSpan, int depth) {
+        TransMetricContext context = TransMetricContext.builder(TransMetricsOperations.REPOSITORY)
+                .parent(parentSpan)
+                .depth(depth)
+                .targetClass(targetClass)
+                .repoName(transRepoMeta.getRepoName())
+                .repositoryClass(transRepoMeta.getRepository())
+                .build();
+        return TransMetricsCollector.get().startSpan(TransMetricsOperations.REPOSITORY, context);
+    }
+
+    private TransMetrics.Span startFieldSpan(TransFieldMeta transField, TransRepoMeta transRepoMeta, Class<?> targetClass,
+                                             TransMetrics.Span parentSpan, int depth) {
+        TransMetricContext context = TransMetricContext.builder(TransMetricsOperations.FIELD)
+                .parent(parentSpan)
+                .depth(depth)
+                .targetClass(targetClass)
+                .fieldName(transField.getField().getName())
+                .repoName(transRepoMeta.getRepoName())
+                .repositoryClass(transRepoMeta.getRepository())
+                .build();
+        return TransMetricsCollector.get().startSpan(TransMetricsOperations.FIELD, context);
     }
 
     /**
@@ -171,15 +216,7 @@ public class TransService {
                 .filter(TransModel::needTrans)
                 .collect(Collectors.toList());
     }
-    
-
-    private void doTrans_0(TransRepository<Object, Object> transRepository, TransRepoMeta transRepoMeta, List<TransModel> transModels) {
-        List<Object> transValues = transModels.stream().map(TransModel::getMultipleTransVal).flatMap(Collection::stream).distinct().collect(Collectors.toList());
-        Map<Object, Object> transValueMap = transRepository.getTransValueMap(transValues,
-                new DefaultTransContext(transRepoMeta.getRepoName(), transRepoMeta.getAttributes()));
-        if (CollectionUtils.isNotEmpty(transValueMap)) {
-            transModels.forEach(transModel -> transModel.fillValue(transValueMap));
-        }
-    }
 
 }
+
+
